 - Support for flat scroll bars has been removed.
 - Global variables InWin2k and IsWinXP, enum member hsXPStyle, function DrawXPButton() and support for Windows 2000 has been removed.
 - Global variable IsWinNT and support for Windows 9x has been removed.
 - Improvement: Added support for Delphi XE2 and 64Bit compiler.
 - Support for Delphi 5/6 and C++ Builder 5/6 has been dropped.
August 2011
 - Improvement: Minor code improvements
April 2011
 - Bug fix: Reverted change of November 2010 (Creating the WorkerThread will no longer change System.IsMultiThread)
            it caused sporadic AVs during app start which disappeared after revering the change. This code can lead to a wrong value 
            of System.IsMultiThread which causes the memory manager to assume a single threaded application.
 - Bug fix: When advancing to the next item while in edit mode, we are now also calling CanEdit().
February 2011
 - Bug fix: In case the LastStructureChangeNode is deleted before the StructureChange event is fired,
            the reference to the LastStructureChangeNode is cleared to avoid providing an invalid node
January 2011
 - Improvement: RTF export now uses landscape paper format and smaller margins, so that more of the contents
                fits on the page
 - Improvement: New Option hoHeaderClickAutoSort for TVTHeader.Options: Clicks on the header will make the
                  clicked column the SortColumn or toggle sort direction if it already was the sort column
 - Improvement: Pressing the tab key in edit mode advances to the next node in edit node, just like the
                Windows 7 Explorer does it.
 - Bug fix: No longer auto-scrolling horizontally when the focused node changes if toFullRowSelect is turned on.
 - Bug fix: Fixed a clipping issue when drawing unbuffered
December 2010
 - Improvement: TBaseVirtualTree.HandleMouseUp now checks CanEdit just in case toEditOnClick